@@ -11,6 +11,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -18,11 +19,17 @@ public class GlobalSwaggerConfig {
 
     @Value("${springdoc.url}")
     private String url;
-
+    private String localUrl = "http://localhost:8080";
     @Bean
     public OpenAPI customOpenAPI() {
         Server server = new Server();
         server.setUrl(url);
+        server.setDescription("https");
+
+        Server localServer = new Server();
+        localServer.setUrl(localUrl);
+        localServer.setDescription("http/localhost");
+
         return new OpenAPI()
                 .components(new Components().addSecuritySchemes("bearerAuth",
                         new SecurityScheme()
@@ -34,8 +41,10 @@ public class GlobalSwaggerConfig {
                         .title("surbear-api")
                         .description("서베어 서버 명세서")
                         .version("1.0"))
-                .servers(List.of(server))
+                .servers(Arrays.asList(server,localServer))
                 .addSecurityItem(new SecurityRequirement().addList("bearerAuth"));
 
     }
+
+
 }
